refactor: add domain layer
